the bug of screen overflow is ok

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,14 +72,12 @@
 
 .bg-home {
     background-color: #AED6CC;
-    width: 100%;
-    height: 100%;
-}
+    width: 100%;   
+} 
 
 .bg-search {
     background-color: #EFC1C4;
     width: 100%;
-    height: 100%;
 }
 
 .scrollable-div::-webkit-scrollbar {
